[project]
name = "f5kb"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
]

[project.scripts]
f5kb = "f5kb.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m 'not live'"
markers = ["live: requires live Coveo network access (use pytest -m live to run)"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[tool.ruff]
exclude = ["config.yaml"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
